# irodori-api

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
irodori_api/: main.py  models.py
